--- a/lab8/app/src/main/resources/Auth.fxml
+++ b/lab8/app/src/main/resources/Auth.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ifmo.gui.controllers.AuthController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <PasswordField fx:id="passwordField" layoutX="226.0" layoutY="125.0" promptText="Password" />
       <TextField fx:id="loginField" layoutX="226.0" layoutY="94.0" promptText="Login" />
-      <Button fx:id="loginButton" layoutX="226.0" layoutY="188.0" mnemonicParsing="false" text="Вход" onAction="#handleButton" />
-      <Button  fx:id="registerButton" layoutX="290.0" layoutY="188.0" mnemonicParsing="false" text="Регистрация" onAction="#handleButton" />
+      <Button fx:id="loginButton" layoutX="226.0" layoutY="188.0" mnemonicParsing="false" text="Вход" onAction="#handleButton"/>
+      <Button  fx:id="registerButton" layoutX="290.0" layoutY="188.0" mnemonicParsing="false" text="Регистрация" onAction="#handleButton"/>
    </children>
 </AnchorPane>
