--- a/lab8/app/src/main/resources/Auth.fxml
+++ b/lab8/app/src/main/resources/Auth.fxml
@@ -1,16 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <PasswordField fx:id="passwordField" layoutX="226.0" layoutY="125.0" promptText="Password" />
-      <TextField fx:id="loginField" layoutX="226.0" layoutY="94.0" promptText="Login" />
-      <Button fx:id="loginButton" layoutX="226.0" layoutY="188.0" mnemonicParsing="false" text="Вход" onAction="#handleButton"/>
-      <Button  fx:id="registerButton" layoutX="290.0" layoutY="188.0" mnemonicParsing="false" text="Регистрация" onAction="#handleButton"/>
-   </children>
-</AnchorPane>
+<BorderPane xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <left>
+      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="499.0" BorderPane.alignment="CENTER">
+         <children>
+            <PasswordField fx:id="passwordField" alignment="CENTER" layoutX="194.0" layoutY="277.0" promptText="Password" />
+            <TextField fx:id="loginField" alignment="CENTER" layoutX="194.0" layoutY="242.0" promptText="Login" />
+            <Button fx:id="loginButton" layoutX="194.0" layoutY="321.0" mnemonicParsing="false" onAction="#handleButton" text="Вход" />
+            <Button fx:id="registerButton" layoutX="258.0" layoutY="321.0" mnemonicParsing="false" onAction="#handleButton" text="Регистрация" />
+         </children>
+      </AnchorPane>
+   </left>
+   <center>
+      <Canvas height="803.0" width="468.0" BorderPane.alignment="CENTER" />
+   </center>
+</BorderPane>
