--- a/lab8/app/src/main/resources/Auth.fxml
+++ b/lab8/app/src/main/resources/Auth.fxml
@@ -3,6 +3,8 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Text?>
 <?import javafx.scene.layout.AnchorPane?>
 
 
@@ -12,5 +14,9 @@
       <TextField fx:id="loginField" alignment="CENTER" layoutX="326.0" layoutY="246.0" promptText="Login" />
       <Button fx:id="loginButton" layoutX="326.0" layoutY="346.0" mnemonicParsing="false" onAction="#handleButton" text="Вход" />
       <Button fx:id="registerButton" layoutX="400.0" layoutY="346.0" mnemonicParsing="false" onAction="#handleButton" text="Регистрация" />
+
+      <StackPane fx:id="popupPane" layoutX="200.0" layoutY="250.0" prefHeight="100.0" prefWidth="400.0" style="-fx-background-color: rgba(255, 0, 0, 0.7);" visible="false">
+         <Text fill="WHITE" text="Некорректный логин или пароль." />
+      </StackPane>
    </children>
 </AnchorPane>
