--- a/lab8/app/src/main/resources/Table.fxml
+++ b/lab8/app/src/main/resources/Table.fxml
@@ -36,8 +36,8 @@
    <bottom>
       <HBox prefHeight="39.0" prefWidth="624.0" BorderPane.alignment="CENTER">
          <children>
-            <Button mnemonicParsing="false" text="Профиль" />
-            <Button mnemonicParsing="false" text="Визуализация " />
+            <Button mnemonicParsing="false" onAction="#handleProfileButton" text="Профиль" />
+            <Button mnemonicParsing="false" onAction="#handleVisualizationButton" text="Визуализация " />
          </children>
       </HBox>
    </bottom>
