--- a/lab8/app/src/main/resources/Auth.fxml
+++ b/lab8/app/src/main/resources/Auth.fxml
@@ -8,12 +8,12 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" stylesheets="auth.css">
    <children>
       <PasswordField fx:id="passwordField" alignment="CENTER" layoutX="326.0" layoutY="288.0" promptText="Password" />
       <TextField fx:id="loginField" alignment="CENTER" layoutX="326.0" layoutY="246.0" promptText="Login" />
-      <Button fx:id="loginButton" layoutX="326.0" layoutY="346.0" mnemonicParsing="false" onAction="#handleButton" text="Вход" />
-      <Button fx:id="registerButton" layoutX="400.0" layoutY="346.0" mnemonicParsing="false" onAction="#handleButton" text="Регистрация" />
+      <Button fx:id="loginButton" layoutX="300.0" layoutY="346.0" mnemonicParsing="false" onAction="#handleButton" text="Вход" />
+      <Button fx:id="registerButton" layoutX="450.0" layoutY="346.0" mnemonicParsing="false" onAction="#handleButton" text="Регистрация" />
 
       <StackPane fx:id="popupPane" layoutX="200.0" layoutY="250.0" prefHeight="100.0" prefWidth="400.0" style="-fx-background-color: rgba(255, 0, 0, 0.7);" visible="false">
          <Text fill="WHITE" text="Некорректный логин или пароль." />
