--- a/lab8/app/src/main/resources/Map.fxml
+++ b/lab8/app/src/main/resources/Map.fxml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.BorderPane?>
 
-<Pane fx:id="rootPane" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" prefWidth="800.0" prefHeight="600.0">
-    <ImageView fx:id="mapView" fitWidth="800.0" fitHeight="600.0" />
-</Pane>
+
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
+   <bottom>
+      <Button fx:id="backToTable" mnemonicParsing="false" onAction="#handleBackToTable" prefHeight="0.0" prefWidth="600.0" text="Вернуться" BorderPane.alignment="CENTER" />
+   </bottom>
+   <center>
+      <ImageView fitHeight="375.0" fitWidth="598.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER" />
+   </center>
+</BorderPane>
