--- a/lab8/app/bin/main/Auth.fxml
+++ b/lab8/app/bin/main/Auth.fxml
@@ -7,16 +7,15 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" stylesheets="auth.css">
    <children>
-      <PasswordField fx:id="passwordField" alignment="CENTER" layoutX="326.0" layoutY="288.0" promptText="Password" />
-      <TextField fx:id="loginField" alignment="CENTER" layoutX="326.0" layoutY="246.0" promptText="Login" />
-      <Button fx:id="loginButton" layoutX="300.0" layoutY="346.0" mnemonicParsing="false" onAction="#handleButton" text="Вход" />
-      <Button fx:id="registerButton" layoutX="450.0" layoutY="346.0" mnemonicParsing="false" onAction="#handleButton" text="Регистрация" />
+      <PasswordField fx:id="passwordField" alignment="CENTER" layoutX="326.0" layoutY="288.0" promptText="%password.prompt"/>
+      <TextField fx:id="loginField" alignment="CENTER" layoutX="326.0" layoutY="246.0" promptText="%login.prompt"/>
+      <Button fx:id="loginButton" layoutX="300.0" layoutY="346.0" mnemonicParsing="false" onAction="#handleButton" text="%login.button" />
+      <Button fx:id="registerButton" layoutX="450.0" layoutY="346.0" mnemonicParsing="false" onAction="#handleButton" text="%register.button" />
 
       <StackPane fx:id="popupPane" layoutX="200.0" layoutY="250.0" prefHeight="100.0" prefWidth="400.0" style="-fx-background-color: rgba(255, 0, 0, 0.7);" visible="false">
-         <Text fill="WHITE" text="Некорректный логин или пароль." />
+         <Text fill="WHITE" text="%popup.warning" />
       </StackPane>
    </children>
 </AnchorPane>
